@@ -3,12 +3,12 @@ package io.github.hanhy06.emote.server;
 import io.github.hanhy06.emote.EmoteMod;
 import net.minecraft.server.MinecraftServer;
 import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.io.TempDir;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Comparator;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.regex.Pattern;
@@ -18,29 +18,25 @@ import static org.junit.jupiter.api.Assertions.*;
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 class ServerConfigTest {
     private static final long SERVER_TIMEOUT_SECONDS = 60;
-    private static final Path RUN_DIRECTORY = Path.of("run").toAbsolutePath().normalize();
-    private static final Path CONFIG_DIRECTORY = RUN_DIRECTORY.resolve("config/emote");
-    private static final Path SERVER_LOG = Path.of("build/test-results/server-config.log").toAbsolutePath();
+    private static Path runDirectory;
+    private static Path configDirectory;
+    private static Path serverLog;
     private static Process server;
     private static long deadline;
 
     @BeforeAll
-    static void deleteConfigAndStartServer() throws Exception {
-        Files.createDirectories(RUN_DIRECTORY);
-        Path eula = RUN_DIRECTORY.resolve("eula.txt");
+    static void deleteConfigAndStartServer(@TempDir Path tempDir) throws Exception {
+        runDirectory = tempDir;
+        configDirectory = runDirectory.resolve("config/emote");
+        serverLog = runDirectory.resolve("server-config.log");
+
+        Path eula = runDirectory.resolve("eula.txt");
         if (Files.notExists(eula)) {
             Files.writeString(eula, "eula=true\n", StandardCharsets.UTF_8);
         }
         assertTrue(Files.readString(eula).matches("(?s).*\\beula=true\\b.*"), "run/eula.txt must accept the Minecraft EULA");
-        if (Files.exists(CONFIG_DIRECTORY)) {
-            assertEquals(CONFIG_DIRECTORY, CONFIG_DIRECTORY.toRealPath(), "Refusing to delete a redirected config directory");
-            try (var paths = Files.walk(CONFIG_DIRECTORY)) {
-                for (Path path : paths.sorted(Comparator.reverseOrder()).toList()) {
-                    Files.delete(path);
-                }
-            }
-        }
-        assertFalse(Files.exists(CONFIG_DIRECTORY));
+        Files.writeString(runDirectory.resolve("server.properties"), "server-port=0\n", StandardCharsets.UTF_8);
+        assertFalse(Files.exists(configDirectory));
 
         Path mainClasses = Path.of(EmoteMod.class.getProtectionDomain().getCodeSource().getLocation().toURI());
         Path mainResources = Path.of("build/resources/main").toAbsolutePath();
@@ -56,9 +52,8 @@ class ServerConfigTest {
             "net.fabricmc.loader.impl.launch.knot.KnotServer",
             "--world", "TEST", "nogui"
         );
-        Files.createDirectories(SERVER_LOG.getParent());
-        server = new ProcessBuilder(command).directory(RUN_DIRECTORY.toFile())
-            .redirectErrorStream(true).redirectOutput(SERVER_LOG.toFile()).start();
+        server = new ProcessBuilder(command).directory(runDirectory.toFile())
+            .redirectErrorStream(true).redirectOutput(serverLog.toFile()).start();
         deadline = System.nanoTime() + TimeUnit.SECONDS.toNanos(SERVER_TIMEOUT_SECONDS);
         server.onExit().orTimeout(SERVER_TIMEOUT_SECONDS, TimeUnit.SECONDS).exceptionally(exception -> {
             server.destroyForcibly();
@@ -70,12 +65,12 @@ class ServerConfigTest {
     @Order(1)
     void copiesAndLoadsBundledEmotesAfterConfigDeletion() throws Exception {
         awaitLoading("Loaded");
-        assertTrue(Files.isRegularFile(CONFIG_DIRECTORY.resolve("config.json")));
-        assertTrue(Files.isRegularFile(CONFIG_DIRECTORY.resolve("emotes.json")));
+        assertTrue(Files.isRegularFile(configDirectory.resolve("config.json")));
+        assertTrue(Files.isRegularFile(configDirectory.resolve("emotes.json")));
         Path samples = Path.of("docs/sample");
         try (var paths = Files.walk(samples)) {
             for (Path sample : paths.filter(path -> path.toString().endsWith(".json")).toList()) {
-                Path copied = CONFIG_DIRECTORY.resolve("emote").resolve(samples.relativize(sample));
+                Path copied = configDirectory.resolve("emote").resolve(samples.relativize(sample));
                 assertTrue(Files.isRegularFile(copied), "Missing bundled emote: " + sample);
                 assertEquals(-1L, Files.mismatch(sample, copied), "Bundled emote differs: " + sample);
             }
@@ -86,16 +81,24 @@ class ServerConfigTest {
     @Order(2)
     void reloadsWithoutEmoteLoadingFailures() throws Exception {
         awaitLoading("Loaded");
+        long reloadLogOffset = Files.size(serverLog);
         server.outputWriter(StandardCharsets.UTF_8).write("emote reload\n");
         server.outputWriter(StandardCharsets.UTF_8).flush();
-        awaitLoading("Reloaded");
+        awaitLoading("Loaded", reloadLogOffset);
     }
 
     private static void awaitLoading(String action) throws Exception {
+        awaitLoading(action, 0L);
+    }
+
+    private static void awaitLoading(String action, long logOffset) throws Exception {
         Pattern summary = Pattern.compile(action + " (\\d+) emotes from (\\d+) files");
         while (System.nanoTime() < deadline) {
-            String log = Files.readString(SERVER_LOG);
-            var match = summary.matcher(log);
+            byte[] logBytes = Files.readAllBytes(serverLog);
+            int offset = Math.toIntExact(Math.min(logOffset, logBytes.length));
+            String log = new String(logBytes, StandardCharsets.UTF_8);
+            String appendedLog = new String(logBytes, offset, logBytes.length - offset, StandardCharsets.UTF_8);
+            var match = summary.matcher(appendedLog);
             if (match.find()) {
                 long expected;
                 try (var paths = Files.walk(Path.of("docs/sample"))) {
@@ -109,7 +112,7 @@ class ServerConfigTest {
             assertTrue(server.isAlive(), "Server exited before " + action + ":\n" + log);
             Thread.sleep(100);
         }
-        fail("Server timed out before " + action + ":\n" + Files.readString(SERVER_LOG));
+        fail("Server timed out before " + action + ":\n" + new String(Files.readAllBytes(serverLog), StandardCharsets.UTF_8));
     }
 
     @AfterAll
